--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^1.1.0
   cached_network_image: ^3.3.1
+  flutter_localizations:
+    sdk: flutter
+  intl: any
+  provider: ^6.1.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -58,7 +62,7 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  generate: true
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/
